# stegor

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  errors.rs  main.rs  utils.rs
