[package]
name = "stego"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
hex="0.4.3"
hex-literal="0.3.3"
bytes = "1.2.1"
hips-lib = { version = "0.1.0", features = ["image"]}